<resources>
    <string name="app_name">Chicago 311</string>
    <string name="title_create_request">Create request</string>
    <string name="title_create_request_short">New</string>
    <string name="title_look_up_requests">Find request</string>
    <string name="title_look_up_requests_short">Requests</string>
    <string name="title_new_request">New request</string>
    <string name="title_help">Help</string>

    <!-- General -->
    <string name="loading_with_ellipsis">Loading&#8230;</string>
    <string name="change">Change</string>
    <string name="current_location">Current Location</string>
    <string name="location">Location</string>
    <string name="photos">Photos</string>
    <string name="details">Details</string>
    <string name="optional">Optional</string>

    <!-- Create Request -->
    <string name="error_message_request_list_failed">Couldn\'t load services :(</string>
    <string name="title_reporter">Reporter (Optional)</string>
    <string name="title_request_details">Request Details</string>
    <string name="tab_title_details">Details</string>
    <string name="tab_title_location_photos">Location &amp; Photos</string>
    <string name="tab_title_contact">Contact</string>
    <!-- details -->
    <string name="form_spinner_hint">Select an item</string>
    <string name="form_required_footnote_suffix">denotes required field</string>
    <string name="form_validation_missing_fields">Please select required fields.</string>
    <!-- location -->
    <string name="location_permission_warning">Enable current location for most accurate results</string>
    <string name="location_pin">Location pin</string>
    <string name="location_title_empty">Location</string>
    <string name="location_please_select">Please select</string>
    <string name="location_validation_error">Please select a location</string>
    <!-- photos -->
    <string name="photos_add_prompt">Upload photos (optional)</string>
    <string name="photos_content_description">Add photos icon</string>
    <!-- contact info -->
    <string name="contact_info_description">Leave blank to submit your request anonymously.</string>
    <string name="person_content_description">Person icon</string>
    <string name="first_name">First name</string>
    <string name="first_name_hint">Jane</string>
    <string name="last_name">Last name</string>
    <string name="last_name_hint">Doe</string>
    <string name="email_content_description">Email icon</string>
    <string name="email">Email</string>
    <string name="email_hint">jane.doe@example.com</string>
    <string name="phone_content_description">Phone icon</string>
    <string name="phone">Phone number</string>
    <string name="phone_hint">(312) 555–5555</string>

    <!-- Requests -->
    <string name="find_request_status">Look up request</string>
    <string name="hint_look_up_request">Request #, e.g. 17–07899877</string>
    <string name="button_name_search">Search</string>
    <string name="label_recent_service_requests">Recent service requests</string>
    <string name="label_look_up_service_requests">Look up request</string>
    <string name="request_number">#%1$s</string>
    <string name="label_agency_responsible">Reviewed by %1$s</string>
    <string name="label_request_creation_date">Created:</string>
    <string name="label_request_updated_date">Updated:</string>

    <!-- Help -->
    <string name="contact_icon_content_description">Contact info icon</string>
    <string name="contact_name">311 City Services</string>
    <string name="contact_address">2111 W. Lexington Street, Chicago, IL 60612</string>
    <string name="call_phone_number_label">Phone Number</string>
    <string name="call_phone_number_in">Within Chicago area: 311</string>
    <string name="call_phone_number_out">Outside Chicago area: 312.744.5000</string>
    <string name="call_when_label">When to call</string>
    <string name="call_when_value"><![CDATA[Call 311 if you want to…<br/>
        <li>Find services and programs within the City of Chicago, or to find the appropriate department or agency to direct your questions and/or concerns.</li>
        <li>Request numerous City Services. Some of these services include, but are not limited to request garbage carts, report stray animals, report abandoned vehicles and more.</li>
        <li>Request information about <a title="Cultural Affairs &amp; Special Events" href="http://www.cityofchicago.org/city/en/depts/dca.html">City and neighborhood events, including parades, Grant and Millennium Parks festivals</a>, and Chicago Public Library programs. Also visit <a title="Choose Chicago" href="http://www.choosechicago.com/">choosechicago.com </a>more to find more exciting activities happening everyday around Chicago.</li>
        <li>Find out what <a title="Chicago Police Department" href="https://portal.chicagopolice.org/portal/page/portal/ClearPath"> Police</a> District and beat you live in, as well as the date, time and location of your next beat meeting.</li>
        <li>File a non-emergency police report or talk to police personnel in your district. Remember, dial 311 if the incident that you are reporting has occurred and the offender is gone from the scene; however, dial 911 if the incident you are reporting is in progress and the presence of a police officer will help resolve the matter.</li>
        <li>Find out what political district you live in (federal, state or municipal), as well as the name, address and telephone number of your <a title="Find Your Alderman" href="http://www.cityofchicago.org/city/en/about/council.html">Alderman</a> so you can forward your questions and/or concerns directly.</li>
        <li>Request shelter information &amp; assistance and information about homelessness prevention. It is important to relay as much information as possible to the operator so that the City can service you as quickly and efficiently as possible.&nbsp; The City of Chicago offers residents a variety of options designed to help improve their quality of life, including the "Home Ownership Preservation Initiative (HOPI)" and the "Homelessness Prevention Call Center (HPCC)."</li>
    ]]></string>
    <string name="additional_info_label">Additional Info</string>
    <string name="additional_info_faq_link"><a href="https://www.cityofchicago.org/city/en/depts/311/supp_info/faq.html">Frequently Asked Questions</a></string>
    <string name="additional_info_full_site"><a href="https://www.cityofchicago.org/city/en/depts/311.html">Full site</a></string>
    <string name="additional_info_content_description">Additional info icon</string>
</resources>
