<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/contactInfoDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/contact_info_description"
            android:textAppearance="@style/TextAppearance.AppCompat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/iconPerson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/person_content_description"
            app:layout_constraintStart_toStartOf="@+id/contactInfoDescription"
            app:layout_constraintTop_toBottomOf="@+id/contactInfoDescription"
            app:srcCompat="@drawable/ic_person"/>

        <TextView
            android:id="@+id/firstNameTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="16dp"
            android:text="@string/first_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iconPerson"
            app:layout_constraintTop_toTopOf="@+id/iconPerson"/>

        <EditText
            android:id="@+id/contactAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:hint="@string/first_name_hint"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/firstNameTitle"
            app:layout_constraintTop_toBottomOf="@+id/firstNameTitle"/>

        <TextView
            android:id="@+id/contactPhoneNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/last_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iconPerson"
            app:layout_constraintTop_toBottomOf="@+id/contactAddress"/>

        <EditText
            android:id="@+id/lastNameEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:hint="@string/last_name_hint"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/contactPhoneNumber"
            app:layout_constraintTop_toBottomOf="@+id/contactPhoneNumber"/>

        <ImageView
            android:id="@+id/iconEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:contentDescription="@string/email_content_description"
            app:layout_constraintStart_toStartOf="@+id/contactInfoDescription"
            app:layout_constraintTop_toBottomOf="@+id/lastNameEditText"
            app:srcCompat="@drawable/ic_email"/>

        <TextView
            android:id="@+id/emailTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="16dp"
            android:text="@string/email"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iconEmail"
            app:layout_constraintTop_toTopOf="@+id/iconEmail"/>

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/emailTitle"
            app:layout_constraintTop_toBottomOf="@+id/emailTitle"/>

        <ImageView
            android:id="@+id/iconPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:contentDescription="@string/phone_content_description"
            app:layout_constraintStart_toStartOf="@+id/contactInfoDescription"
            app:layout_constraintTop_toBottomOf="@+id/emailEditText"
            app:srcCompat="@drawable/ic_phone"/>

        <TextView
            android:id="@+id/phoneTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="16dp"
            android:text="@string/phone"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iconPhone"
            app:layout_constraintTop_toTopOf="@+id/iconPhone"/>

        <EditText
            android:id="@+id/phoneEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:hint="@string/phone_hint"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/phoneTitle"
            app:layout_constraintTop_toBottomOf="@+id/phoneTitle"/>
    </android.support.constraint.ConstraintLayout>
</ScrollView>